--- a/AA-Greedy.ipynb
+++ b/AA-Greedy.ipynb
@@ -57,12 +57,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "353\n"
+     ]
+    }
+   ],
+   "source": [
+    "from util import get_subway_graph, draw_subway_graph\n",
+    "#from test import test\n",
+    "from graph import Graph\n",
+    "\n",
+    "G, lines = get_subway_graph('csv', Graph)\n",
+    "#G.edge[10][95]\n",
+    "print (len(G.edges()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from util import get_subway_graph, draw_subway_graph\n",
+    "#from test import test\n",
+    "from graph import Graph\n",
+    "import random\n",
+    "G, lines = get_subway_graph('csv', Graph)\n",
+    "\n",
+    "\n",
     "def prim(G, origin=None):\n",
     "    \"\"\" Implementación del algoritmo de Prim para obtener el MST de un grafo cualquiera.\n",
     "    Args:\n",
@@ -70,9 +100,91 @@
     "    Returns:\n",
     "        tree: El grafo de tipo Graph que contiene el arbol de expansión mínima.\n",
     "    \"\"\"\n",
+    "    infinity = 999999999999999\n",
     "    tree = Graph()\n",
     "    \n",
-    "    return tree"
+    "    \n",
+    "    for i in G.nodes():\n",
+    "        G.node[i].update({'dist_actual': infinity})\n",
+    "        G.node[i].update({'node_prev': None})\n",
+    "        tree.node[i] = G.node[i]\n",
+    "    G.node[origin]['dist_actual'] = 0\n",
+    "    \n",
+    "    dif = []\n",
+    "    visited = []\n",
+    "    pending = []\n",
+    "    \n",
+    "    \n",
+    "    _num_nodes = len(G)\n",
+    "    while _num_nodes != 0:\n",
+    "        inf = infinity\n",
+    "        for i in G.neighbors(origin):\n",
+    "            if i not in pending and i not in visited:\n",
+    "                pending.append(i)\n",
+    "        #print (pending,\"pending\")  \n",
+    "        #print (visited,\"visited\") \n",
+    "        for i in G.edge[origin]:\n",
+    "            if G.node[i]['dist_actual'] > G.edge[origin][i]['distance']:\n",
+    "                G.node[i]['dist_actual'] = G.edge[origin][i]['distance']\n",
+    "                G.node[i]['node_prev'] = origin\n",
+    "                #print (i,G.edge[origin][i]['distance'])\n",
+    "        \n",
+    "        actual = origin\n",
+    "        if actual not in visited:\n",
+    "            visited.append(actual)\n",
+    "        \n",
+    "        for i in pending:\n",
+    "            if G.node[i]['dist_actual'] < inf and i not in visited:\n",
+    "                inf = G.node[i]['dist_actual'] \n",
+    "                origin = i\n",
+    "                #print (G.node[i]['dist_actual'] , origin,\"\\n\")\n",
+    "                \n",
+    "        #print(\"next\",origin) \n",
+    "        tree.add_edge(G.node[origin]['node_prev'],origin)           \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        _num_nodes -= 1\n",
+    "    \n",
+    "    for i in tree.edges():\n",
+    "        if i not in G.edges():\n",
+    "            dif.append(i)\n",
+    "        \n",
+    "    #print(len(tree.edges()),\"len\") \n",
+    "    \"\"\"draw_subway_graph(G, lines, figsize=(10,6))\n",
+    "    draw_subway_graph(t, lines, figsize=(10,6))\"\"\"\n",
+    "    \n",
+    "    return tree,dif,len(G.edges()),len(tree.edges())\n",
+    "    return tree\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-d4a4b793a9d9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#origin = random.randint(0,len(G))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0morigin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morigin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mdraw_subway_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlines\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#draw_subway_graph(t, lines, figsize=(10,6))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-5a6e089bc02e>\u001b[0m in \u001b[0;36mprim\u001b[1;34m(G, origin)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[1;31m#print(\"next\",origin)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m         \u001b[0mtree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0morigin\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'node_prev'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0morigin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Cristian\\Desktop\\Algorismica Avançada\\ass2-greedy-crpantsal\\graph.py\u001b[0m in \u001b[0;36madd_edge\u001b[1;34m(self, node1, node2, attr_dict)\u001b[0m\n\u001b[0;32m     76\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mn1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn2\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnode1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnode2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_edges\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mn2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_edges\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0medge_dict\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_edges\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0medge_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 10"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#origin = random.randint(0,len(G))\n",
+    "origin = 10\n",
+    "t = prim(G, origin)\n",
+    "draw_subway_graph(G, lines, figsize=(10,6))\n",
+    "#draw_subway_graph(t, lines, figsize=(10,6))"
    ]
   },
   {
@@ -86,15 +198,6 @@
     "</p>\n",
     "</div>\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -155,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
